Both nearest fixtures and full calendar are now loaded and applied at the start, and toggling between then now only toggles their visibility

--- a/views/popup/popup.css
+++ b/views/popup/popup.css
@@ -149,7 +149,7 @@ table {
     border-spacing: 0;
 }
 
-.nearest-fixtures-table td {
+.fixtures-table td {
     padding: 3px;
 }
 
@@ -311,4 +311,8 @@ label {
 .inline-link:not(:last-child) {
     border-right: 1px solid rgb(0, 119, 204);
     padding-right: 5px;
+}
+
+.contact-manager-link.disabled {
+    cursor: default;
 }
